login and sign up

--- a/kazMed/src/app/shaired/footer/footer.component.html
+++ b/kazMed/src/app/shaired/footer/footer.component.html
@@ -4,10 +4,9 @@
       <h1>Patient</h1>
       <ul>
         <br>
-        <li>Doctors</li>
-        <li>Medcenter</li>
+        <a routerLink="../doctors"><li>Doctors</li></a>
+        <a routerLink="../medcenter"><li>Medcenter</li></a>
         <li>Services</li>
-        <li>Skils</li>
       </ul>
     </div>
     <div class="col">
@@ -21,7 +20,7 @@
       <h1>About us</h1>
       <ul>
         <br>
-        <li>About project</li>
+        <a routerLink="../about"><li>About project</li></a>
       </ul>
     </div>
     <div class="col social">
