--- a/kazMed/src/app/shaired/footer/footer.component.css
+++ b/kazMed/src/app/shaired/footer/footer.component.css
@@ -40,6 +40,10 @@
   padding: 5px 0px 5px 0px;
   cursor: pointer;
 }
+
+.footer a{
+  text-decoration: none;
+}
 .social ul li {
   display: inline-block;
   padding-right: 5px !important;
