--- a/kazMed/src/app/shaired/navigation-bar/navigation-bar.component.html
+++ b/kazMed/src/app/shaired/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <header><ul>
   <a routerLink="../home">
   <img width="40px" height="40px" src="assets/logo2.PNG" alt="kazMed">
-    <li class="li"><p style="color: black">KazMed</p></li></a>
+    <li class="li"><p style="color: #00184B">KazMed</p></li></a>
   <a routerLink="../about" class="alink"><li class="li2">About</li></a>
   <a routerLink="../" class="alink"><li class="li2">Services</li></a>
   <a routerLink="../doctors" class="alink"><li class="li2">Doctors</li></a>
