--- a/kazMed/src/app/shaired/sign-in/sign-in.component.html
+++ b/kazMed/src/app/shaired/sign-in/sign-in.component.html
@@ -3,15 +3,15 @@
   <div class="box">
     <p>Email</p>
     <div>
-      <input id="email" name="email" formControlName="userName" placeholder="Enter Your email">
+      <input id="email" name="email" formControlName="email" placeholder="Enter Your email">
     </div>
   </div>
   <div class="box">
     <p>Password</p>
     <div>
-      <input id="passWord" name="passWord" formControlName="passWord" placeholder="Enter Your password">
+      <input id="passWord" type="password" name="passWord" formControlName="password" placeholder="Enter Your password">
     </div>
   </div>
   <button class="signInBtn" (click)="login()">Sign in</button>
-  <p class="text">Don't have acount? <br> <a>Sign up</a></p>
+  <p class="text">Don't have acount?<br><a (click)="signUp()">Sign up</a></p>
 </form>
