--- a/kazMed/src/app/about-us-page/about-us/about-us.component.html
+++ b/kazMed/src/app/about-us-page/about-us/about-us.component.html
@@ -40,5 +40,17 @@
       <p>Average rating of doctors</p>
     </div>
   </div>
+
   <br><br><br>
+
+  <div class="dev">
+    <h1>Developers: </h1>
+    <p>Yerkyn Shynggys</p>
+    <p>Moldakyn Sagi</p>
+    <p>Mussamadin Assel</p>
+  </div>
+
+
+  <br><br><br>
+
 </div>
