--- a/kazMed/src/app/main-page/home/home.component.html
+++ b/kazMed/src/app/main-page/home/home.component.html
@@ -6,7 +6,7 @@
       <br>
       <p class="txt2">KazMed provides real-time visual and audio<br>patient assessment at a distance</p>
       <br><br>
-      <a class="btn1" routerLink="../doctors">Book an appointment</a>
+      <a class="btn1" (click)="check()">Book an appointment</a>
     </div>
   </div>
 
@@ -46,7 +46,7 @@
     </div>
 
     <div class="learnt">
-      <h1>Leading healthcare<br>providers</h1>
+      <h1 style="font-family: Montserrat">Leading healthcare<br>providers</h1>
       <hr class="hrlear">
       <br><br>
       <p>KazMed provides progressive, and affordable<br>healthcare, accessible on mobile and online<br>for everyone.
@@ -57,7 +57,7 @@
   <br><br>
   <div class="mobile">
     <div class="mobiletxt">
-      <h1>Download the mobile app</h1>
+      <h1 style="font-family: Montserrat">Download the mobile app</h1>
       <p>Our dedicated patient engagement app and<br>
       web portal allow you to access information<br>
         instantaneously and securely.
