--- a/kazMed/src/app/medcenter-page/list-of-medcenter/list-of-medcenter.component.html
+++ b/kazMed/src/app/medcenter-page/list-of-medcenter/list-of-medcenter.component.html
@@ -1,2 +1,5 @@
-<!--<app-navigation-bar></app-navigation-bar>-->
-<p>list-of-medcenter works!</p>
+<div class="mainDiv">
+  <h1 class="tmed">Top medical clinics</h1>
+
+  <br><br><br>
+</div>
