--- a/kazMed/src/app/main-page/home/home.component.css
+++ b/kazMed/src/app/main-page/home/home.component.css
@@ -39,6 +39,7 @@
   margin-left: 10%;
   color: white;
   background: #414BBE;
+  cursor: pointer;
 }
 
 .btn1:hover{
@@ -153,7 +154,7 @@
 }
 
 .mobiletxt p{
-  font-size: 16px;
+  font-size: 17px;
 }
 
 .mobiletxt a{
